# plex-tools

./: .commitlintrc.yml  .editorconfig  .pre-commit-config.yaml  Dockerfile  mypy.ini  pyproject.toml
.github/workflows/: commitlint.yml  lint.yaml
src/: main.py
src/plextools/: cli.py
