[tool.poetry]
name = "plex-tools"
version = "0.1.0"
description = "A command line interface to perform calls to a running Plex server."
authors = ["Michiel Vanderhoydonck"]

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.4.0"
black = "^21.9b0"
pylint = "^2.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
