[tool.poetry]
name = "plextools"
description = "A command line interface to perform calls to a running Plex server."
authors = ["Michiel Vanderhoydonck"]
packages = [
  {include = "plextools", from = "src"},
]
version = "0.0.1"

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.4.0"
black = "^21.9b0"
pylint = "^2.11.1"
mypy = "^0.910"
PlexAPI = "^4.7.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
plextools = "plextools.cli:app"

[tool.black]
line-length = 139

[tool.isort]
multi_line_output = 3
profile = "black"

[[tool.mypy.overrides]]
disallow_untyped_defs = false
module = "plextools.*"
